--- a/style.css
+++ b/style.css
@@ -1,7 +1,59 @@
+@keyframes bounce{
+  /* start */
+  0% {
+    background-color: rgb(255, 122, 122);
+  }
+
+  50% {
+   background-color: rgb(255, 166, 122);
+  }
+  /* end */
+  100% {
+    background-color: rgb(255, 237, 122);
+  }
+}
+
 html, body {
+  height: 100%;
+}
+
+canvas{
+  border-style: solid;
+  border-width: 15px;
+  border-radius: 20px;
+
+  text-align: center;
+}
+
+h1 {
+  vertical-align: text-top;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 75px;
+
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 200px;
+
+  animation-name: bounce;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+body {
   margin: 0;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+
+  /* This centers our sketch horizontally. */
+  justify-content: center;
+
+  /* This centers our sketch vertically. */
+  align-items: center;
+
+  /* Sets background color */
+  background-color: rgb(255, 200, 122;
 }
-canvas {
-  display: block;
-}
+
+
