--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   align-items: center;
 
   /* Sets background color */
-  background-color: rgb(255, 200, 122;
+  background-color: rgb(255, 200, 122);
 }
 
 
